--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/icon": "^1.10.3",
+    "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@vue-flow/background": "^1.3.2",
@@ -22,8 +22,5 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "latest",
     "vue-router": "latest"
-  },
-  "devDependencies": {
-    "@iconify-json/heroicons": "^1.2.2"
   }
 }
