--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
       - run: npm install
       - name: Build Nuxt app
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: NUXT_APP_BASE_URL=/ethical-analysis-visualizer-ai/ npx nuxt build --preset github_pages
+          NUXT_PUBLIC_GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: NUXT_PUBLIC_GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} NUXT_APP_BASE_URL=/ethical-analysis-visualizer-ai/ npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
