--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,17 +15,17 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      # Pick your own package manager and build script
       - run: npm install
+      - name: Set up environment variables
+        run: echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> $GITHUB_ENV
       - name: Build Nuxt app
         env:
-          NUXT_PUBLIC_GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: NUXT_PUBLIC_GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} NUXT_APP_BASE_URL=/ethical-analysis-visualizer-ai/ npx nuxt build --preset github_pages
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: NUXT_APP_BASE_URL=/ethical-analysis-visualizer-ai/ npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./.output/public
-  # Deployment job
   deploy:
     # Add a dependency to the build job
     needs: build
