--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
   }
 }
