build: fix env variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,10 @@ jobs:
           node-version: '20'
       - run: npm install
       - name: Set up environment variables
-        run: echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> $GITHUB_ENV
+        run: echo "NUXT_PUBLIC_GEMINI_API_KEY=${{ secrets.NUXT_PUBLIC_GEMINI_API_KEY }}" >> $GITHUB_ENV
       - name: Build Nuxt app
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          NUXT_PUBLIC_GEMINI_API_KEY: ${{ secrets.NUXT_PUBLIC_GEMINI_API_KEY }}
         run: NUXT_APP_BASE_URL=/ethical-analysis-visualizer-ai/ npx nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
