--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@vue-flow/background": "^1.3.2",
     "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.42.1",
     "@vue-flow/node-toolbar": "^1.1.0",
-    "lucide-vue-next": "^0.475.0",
     "nuxt": "^3.15.4",
     "tailwindcss-animate": "^1.0.7",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@iconify-json/line-md": "^1.2.5",
+    "@iconify-json/heroicons": "^1.2.2",
     "typescript": "^5.7.3"
   }
 }
